# 6-semestr

matlab/Solutions/1/: t1.m  t2.m  t3.m  t4.m  t5.m  t6.m  t7.m
matlab/Solutions/2/: t11.m  t15.m  t17.m  t3.m  t6.m  t8.m
matlab/Solutions/3/: t1.m  t2.m  t3.m  t4.m
matlab/Solutions/4/: t1.m  t2.m  t3.m  t4.m  t5.m  t6.m
matlab/Solutions/5/: t1.m  t10.m  t2.m  t3.m  t4.m  t5.m  t6.m  t7.m  t8.m  t9.m
matlab/Solutions/6/: t1.m  t2.m  t3.m  t4.m  t5.m  t6.m
matlab/Solutions/7/: Runge_Kutta.m  local_max.m  ode_func.m  t2.m  t4.m
parallel_computing/mpi/: Tasks.cpp  task
parallel_computing/mpi/src/: Makefile  floyd.c  task1.c  task10.c  task11.c  task2.c  task3.c  task4.c  task5.c  task6.c  task7.c  task8.c  task9.c  test.txt
parallel_computing/omp/: CMakeLists.txt  Makefile  README.md
parallel_computing/omp/src/: atomic.cpp  critical.cpp  hello_world_with_8_threads.cpp  lock.cpp  matrix_mult_vector.cpp  max_min_in_array.cpp  modify_hello_world.cpp  parallel_if.cpp  private_firstprivate.cpp  reduction.cpp  schedule.cpp  sections.cpp  test.cpp  time_schedule.cpp
python/Tasks/: z2.1 Pandas 3.docx
python/dataset/: edited_retail.xlsx  online_retail.xlsx  online_retail_without_datetime.xlsx  sample_retail.xlsx  test.xlsx
python/dataset/z_2.1/: edited_retail.xlsx
python/dataset/z_2.2/: sum_by_StockCode.xlsx
python/reports/: z 2.2 Tyutikov.docx
python/src/: temp.ipynb  z_2_pandas.py
python/src/z_2.1/: z_2.1.py
web/css/: styles.css  task2.html
web/html/: aygul.html  task1.html  zadanie1_nurgaliev.html
web/mvcApp/: pom.xml
web/regex/: pom.xml
(+29 files in other folders)
